--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,13 @@ version: "3.9"
 
 services:
   next:
-    build: ./
+    build:
+      context: ./
+      args:    
+        - API_BASE=${API_BASE}
+        - BACKEND_SERVER=${BACKEND_SERVER}
     restart: always
-    environment:
-      API_BASE: "${API_BASE:-http://localhost:3000}"
-      BACKEND_SERVER: "${BACKEND_SERVER:-http://localhost:8080}"
+    env_file:
+      - .env
     ports:
       - "3000:3000"
